open-webui_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: ai-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          command: ["uvicorn"]
          args:
            - "open_webui.main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "3000"
          ports:
            - containerPort: 3000
