pod_labels_demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  labels:
    env: test
spec:
  nodeName: worker2
  containers:
  - name: nginx
    image: nginx:latest
