pod_labels_demo3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx3
  labels:
    env: test
    tier: frontend
spec:
  nodeName: worker2
  containers:
  - name: nginx
    image: nginx:latest
