pod_schedule.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    #env: test
    env: prod
spec:
  nodeName: worker1
  containers:
  - name: nginx
    image: nginx:latest
