ollama_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ai-chat
spec:
  selector:
    app: ollama
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
