open-webui_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: ai-chat
spec:
  selector:
    app: open-webui
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32001
  type: NodePort
