service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rs-test-svc
spec:
  selector:
      env: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
